--- a/clash.ini
+++ b/clash.ini
@@ -5,7 +5,7 @@ surge_ruleset=DIRECT,rules/LocalAreaNetwork.list
 surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/Unbreak.list
 surge_ruleset=🛑 全球拦截,rules/NobyDa/Surge/AdRule.list
 surge_ruleset=🛑 全球拦截,rules/ConnersHua/Surge/Ruleset/Hijacking.list
-surge_ruleset=📹 YouTube,https://raw.githubusercontent.com/jzysl123/qx/master/clash_proxy.txt
+surge_ruleset=📹 YouTube,https://raw.githubusercontent.com/jzysl123/qx/master/clash_proxy.list
 surge_ruleset=🎥 NETFLIX,rules/ConnersHua/Surge/Ruleset/Media/Netflix.list
 surge_ruleset=📺 巴哈姆特,rules/ConnersHua/Surge/Ruleset/Media/Bahamut.list
 surge_ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/GlobalMedia.list
@@ -14,7 +14,7 @@ surge_ruleset=📲 电报吹水,rules/ConnersHua/Surge/Ruleset/Telegram.list
 surge_ruleset=🔰 节点选择,rules/ConnersHua/Surge/Ruleset/Global.list
 surge_ruleset=🍎 苹果服务,rules/ConnersHua/Surge/Ruleset/Apple.list
 surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/China.list
-surge_ruleset=DIRECT,https://raw.githubusercontent.com/jzysl123/qx/master/clash_whitelist.txt
+surge_ruleset=DIRECT,https://raw.githubusercontent.com/jzysl123/qx/master/clash_whitelist.list
 surge_ruleset=DIRECT,[]GEOIP,CN
 surge_ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
